--- a/style.css
+++ b/style.css
@@ -13,8 +13,12 @@ html {
 
 body {
   font-family: 'Press Start 2P', sans-serif;
-  color: #eee;
-  background-color: #222;
+  color: #9fd3c7;
+  background: linear-gradient(
+    89.7deg,
+    rgb(0, 0, 0) -10.7%,
+    rgb(39, 70, 97) 88.8%
+  );
   /* background-color: #60b347; */
 }
 
@@ -22,12 +26,12 @@ body {
 header {
   position: relative;
   height: 35vh;
-  border-bottom: 7px solid #eee;
+  border-bottom: 7px solid #9fd3c7;
 }
 
 main {
   height: 65vh;
-  color: #eee;
+  color: #9fd3c7;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -57,7 +61,7 @@ h1 {
 }
 
 .number {
-  background: #eee;
+  background: #9fd3c7;
   color: #333;
   font-size: 6rem;
   width: 15rem;
@@ -84,7 +88,7 @@ h1 {
 
 .guess {
   background: none;
-  border: 4px solid #eee;
+  border: 4px solid #9fd3c7;
   font-family: inherit;
   color: inherit;
   font-size: 5rem;
@@ -97,7 +101,7 @@ h1 {
 
 .btn {
   border: none;
-  background-color: #eee;
+  background-color: #9fd3c7;
   color: #222;
   font-size: 2rem;
   font-family: inherit;
@@ -116,4 +120,54 @@ h1 {
 
 .label-score {
   margin-bottom: 2rem;
+}
+
+/* For mobile phones (max-width: 480px) */
+@media (max-width: 480px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  .between {
+    margin-top: 1.5rem;
+    font-size: 1.1rem;
+  }
+
+  .number {
+    font-size: 3rem;
+    width: 10rem;
+  }
+
+  .guess {
+    margin-top: 5rem;
+    font-size: 3rem;
+    width: 15rem;
+  }
+
+  .message {
+    margin-top: 4rem;
+    font-size: 1.5rem;
+  }
+
+  .btn {
+    font-size: 1.4rem;
+    padding: 1.2rem 1.5rem;
+  }
+
+  .left,
+  .right {
+    width: 90%;
+    font-size: 1.6rem;
+  }
+
+  .label-score {
+    margin-top: -5rem;
+  }
+
+  main {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+  }
 }
